--- a/ecjsample.bib
+++ b/ecjsample.bib
@@ -1,9 +1,218 @@
-
-@Book{Smith,
-  author =	 {J. Smith},
-  title = 	 {Introduction to Everything},
-  publisher = 	 {John Doe},
-  year = 	 1974
+@article{pelikan2002survey,
+  title={A survey of optimization by building and using probabilistic models},
+  author={Pelikan, Martin and Goldberg, David E and Lobo, Fernando G},
+  journal={Computational optimization and applications},
+  volume={21},
+  number={1},
+  pages={5--20},
+  year={2002},
+  publisher={Springer}
+}
+@article{beyer2002evolution,
+  title={Evolution strategies--A comprehensive introduction},
+  author={Beyer, Hans-Georg and Schwefel, Hans-Paul},
+  journal={Natural computing},
+  volume={1},
+  number={1},
+  pages={3--52},
+  year={2002},
+  publisher={Springer}
+}
+@book{Holland1975,
+    address = {Ann Arbor},
+    author = {Holland, J. H.},
+    citeulike-article-id = {8042731},
+    keywords = {ifac\_safeprocess},
+    posted-at = {2010-10-18 12:11:34},
+    priority = {2},
+    publisher = {The University of Michigan Press},
+    title = {{Adaption in Natural and Artificial Systems}},
+    year = {1975}
+}
+@article{caruana1997multitask,
+  title={Multitask learning},
+  author={Caruana, Rich},
+  journal={Machine learning},
+  volume={28},
+  number={1},
+  pages={41--75},
+  year={1997},
+  publisher={Springer}
+}
+@article{hauschild2012using,
+  title={Using previous models to bias structural learning in the hierarchical BOA},
+  author={Hauschild, Mark W and Pelikan, Martin and Sastry, Kumara and Goldberg, David E},
+  journal={Evolutionary Computation},
+  volume={20},
+  number={1},
+  pages={135--160},
+  year={2012},
+  publisher={MIT Press}
+}
+@incollection{pelikan2012transfer,
+  title={Transfer learning, soft distance-based bias, and the hierarchical boa},
+  author={Pelikan, Martin and Hauschild, Mark W and Lanzi, Pier Luca},
+  booktitle={Parallel Problem Solving from Nature-PPSN XII},
+  pages={173--183},
+  year={2012},
+  publisher={Springer}
+}
+@book{hboa,
+  title={Hierarchical Bayesian optimization algorithm},
+  author={Pelikan, Martin},
+  year={2005},
+  publisher={Springer}
+}
+@book{pelikan2006scalable,
+  title={Scalable optimization via probabilistic modeling},
+  author={Pelikan, Martin and Sastry, Kumara and Cant{\'u}-Paz, Erick},
+  year={2006},
+  publisher={Springer}
+}
+@article{fernando2010neuronal,
+  title={The neuronal replicator hypothesis},
+  author={Fernando, Chrisantha and Goldstein, Richard and Szathm{\'a}ry, E{\"o}rs},
+  journal={Neural Computation},
+  volume={22},
+  number={11},
+  pages={2809--2857},
+  year={2010},
+  publisher={MIT Press 238 Main St., Suite 500, Cambridge, MA 02142-1046, USA email: journals-info@ mit. edu}
 }
 
+@inproceedings{zhang2000bayesian,
+  title={Bayesian evolutionary optimization using Helmholtz machines},
+  author={Zhang, Byoung-Tak and Shin, Soo-Yong},
+  booktitle={Parallel Problem Solving from Nature PPSN VI},
+  pages={827--836},
+  year={2000},
+  organization={Springer}
+}
 
+@inproceedings{tang2010restricted,
+  title={Restricted Boltzmann machine based algorithm for multi-objective optimization},
+  author={Tang, Huajin and Shim, Vui Ann and Tan, Kay Chen and Chia, Jun Yong},
+  booktitle={Evolutionary Computation (CEC), 2010 IEEE Congress on},
+  pages={1--8},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{pelikan2001escaping,
+  title={Escaping hierarchical traps with competent genetic algorithms},
+  author={Pelikan, Martin and Goldberg, David E},
+  booktitle={Proceedings of the Genetic and Evolutionary Computation Conference (GECCO-2001)},
+  pages={511--518},
+  year={2001}
+}
+
+@article{hinton2006reducing,
+  title={Reducing the dimensionality of data with neural networks},
+  author={Hinton, Geoffrey E and Salakhutdinov, Ruslan R},
+  journal={Science},
+  volume={313},
+  number={5786},
+  pages={504--507},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+@techreport{baluja1994population,
+  title={Population-based incremental learning. a method for integrating genetic search based function optimization and competitive learning},
+  author={Baluja, Shumeet},
+  year={1994},
+  institution={DTIC Document}
+}
+
+@article{harik1999linkage,
+  title={Linkage learning via probabilistic modeling in the ECGA},
+  author={Harik, Georges},
+  journal={Urbana},
+  volume={51},
+  number={61},
+  pages={801},
+  year={1999}
+}
+
+@article{harik1999compact,
+  title={The compact genetic algorithm},
+  author={Harik, Georges R and Lobo, Fernando G and Goldberg, David E},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={3},
+  number={4},
+  pages={287--297},
+  year={1999},
+  publisher={IEEE}
+}
+
+@inproceedings{marti2008introducing,
+  title={Introducing MONEDA: Scalable multiobjective optimization with a neural estimation of distribution algorithm},
+  author={Mart{\'\i}, Luis and Garc{\'\i}a, Jes{\'u}s and Berlanga, Antonio and Molina, Jos{\'e} Manuel},
+  booktitle={Proceedings of the 10th annual conference on Genetic and evolutionary computation},
+  pages={689--696},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{watson1999hierarchically,
+  title={Hierarchically consistent test problems for genetic algorithms},
+  author={Watson, Richard A and Pollack, Jordan B},
+  booktitle={Evolutionary Computation, 1999. CEC 99. Proceedings of the 1999 Congress on},
+  volume={2},
+  year={1999},
+  organization={IEEE}
+}
+
+@inproceedings{mitchell1992royal,
+  title={The royal road for genetic algorithms: Fitness landscapes and GA performance},
+  author={Mitchell, Melanie and Forrest, Stephanie and Holland, John H},
+  booktitle={Proceedings of the first european conference on artificial life},
+  pages={245--254},
+  year={1992},
+  organization={Cambridge: The MIT Press}
+}
+
+@article{watson2014evolution,
+  title={THE EVOLUTION OF PHENOTYPIC CORRELATIONS AND “DEVELOPMENTAL MEMORY”},
+  author={Watson, Richard A and Wagner, G{\"u}nter P and Pavlicev, Mihaela and Weinreich, Daniel M and Mills, Rob},
+  journal={Evolution},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{auger2009benchmarking,
+  title={Benchmarking the (1+ 1) evolution strategy with one-fifth success rule on the BBOB-2009 function testbed},
+  author={Auger, Anne},
+  booktitle={Proceedings of the 11th Annual Conference Companion on Genetic and Evolutionary Computation Conference: Late Breaking Papers},
+  pages={2447--2452},
+  year={2009},
+  organization={ACM}
+}
+
+@inproceedings{vincent2008extracting,
+  title={Extracting and composing robust features with denoising autoencoders},
+  author={Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={1096--1103},
+  year={2008},
+  organization={ACM}
+}
+
+@article{weingartner1967methods,
+  title={Methods for the solution of the multidimensional 0/1 knapsack problem},
+  author={Weingartner, H Martin and Ness, David N},
+  journal={Operations Research},
+  volume={15},
+  number={1},
+  pages={83--103},
+  year={1967},
+  publisher={INFORMS}
+}
+
+@article{hoos2000satllb,
+  title={SATLlB: An Online Resource for Research on SAT},
+  author={Hoos, H and Stiitzle, Thomas},
+  journal={Sat},
+  pages={283},
+  year={2000}
+}
