lots of alex changes

--- a/ecjsample.bib
+++ b/ecjsample.bib
@@ -1,3 +1,132 @@
+@inproceedings{rana1998genetic,
+  title={Genetic algorithm behavior in the MAXSAT domain},
+  author={Rana, Soraya and Whitley, Darrell},
+  booktitle={Parallel Problem Solving from Nature—PPSN V},
+  pages={785--794},
+  year={1998},
+  organization={Springer}
+}
+@inproceedings{pelikan2003hierarchical,
+  title={Hierarchical BOA solves Ising spin glasses and MAXSAT},
+  author={Pelikan, Martin and Goldberg, David E},
+  booktitle={Genetic and Evolutionary Computation—GECCO 2003},
+  pages={1271--1282},
+  year={2003},
+  organization={Springer}
+}
+@article{shim2013multi,
+  title={Multi-objective optimization with estimation of distribution algorithm in a noisy environment},
+  author={Shim, Vui Ann and Tan, Kay Chen and Chia, Jun Yong and Al Mamun, Abdullah},
+  journal={Evolutionary computation},
+  volume={21},
+  number={1},
+  pages={149--177},
+  year={2013},
+  publisher={MIT Press}
+}
+@article{hansen2003reducing,
+  title={Reducing the time complexity of the derandomized evolution strategy with covariance matrix adaptation (CMA-ES)},
+  author={Hansen, Nikolaus and M{\"u}ller, S and Koumoutsakos, Petros},
+  journal={Evolutionary Computation},
+  volume={11},
+  number={1},
+  pages={1--18},
+  year={2003},
+  publisher={MIT Press}
+}
+@article{rumelhart1988learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={Cognitive modeling},
+  year={1988}
+}
+@article{stanley2009hypercube,
+  title={A hypercube-based encoding for evolving large-scale neural networks},
+  author={Stanley, Kenneth O and D'Ambrosio, David B and Gauci, Jason},
+  journal={Artificial life},
+  volume={15},
+  number={2},
+  pages={185--212},
+  year={2009},
+  publisher={MIT Press}
+}
+@article{nolfi1994learning,
+  title={Learning and evolution in neural networks},
+  author={Nolfi, Stefano and Parisi, Domenico and Elman, Jeffrey L},
+  journal={Adaptive Behavior},
+  volume={3},
+  number={1},
+  pages={5--28},
+  year={1994},
+  publisher={Sage Publications}
+}
+@article{hinton1987learning,
+  title={How learning can guide evolution},
+  author={Hinton, Geoffrey E and Nowlan, Steven J},
+  journal={Complex systems},
+  volume={1},
+  number={3},
+  pages={495--502},
+  year={1987}
+}
+@inproceedings{montana1989training,
+  title={Training Feedforward Neural Networks Using Genetic Algorithms.},
+  author={Montana, David J and Davis, Lawrence},
+  booktitle={IJCAI},
+  volume={89},
+  pages={762--767},
+  year={1989}
+}
+@incollection{thierens2010linkage,
+  title={The linkage tree genetic algorithm},
+  author={Thierens, Dirk},
+  booktitle={Parallel Problem Solving from Nature, PPSN XI},
+  pages={264--273},
+  year={2010},
+  publisher={Springer}
+}
+@article{pelikan2002scalability,
+  title={Scalability of the Bayesian optimization algorithm},
+  author={Pelikan, Martin and Sastry, Kumara and Goldberg, David E},
+  journal={International Journal of Approximate Reasoning},
+  volume={31},
+  number={3},
+  pages={221--258},
+  year={2002},
+  publisher={Elsevier}
+}
+@incollection{harik2006linkage,
+  title={Linkage learning via probabilistic modeling in the extended compact genetic algorithm (ecga)},
+  author={Harik, Georges R and Lobo, Fernando G and Sastry, Kumara},
+  booktitle={Scalable optimization via probabilistic modeling},
+  pages={39--61},
+  year={2006},
+  publisher={Springer}
+}
+@article{larochelle2011neural,
+  title={The neural autoregressive distribution estimator},
+  author={Larochelle, Hugo and Murray, Iain},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  pages={29--37},
+  year={2011}
+}
+@book{holland1975adaptation,
+  title={Adaptation in natural and artificial systems: An introductory analysis with applications to biology, control, and artificial intelligence.},
+  author={Holland, John H},
+  year={1975},
+  publisher={U Michigan Press}
+}
+@article{back1993overview,
+  title={An overview of evolutionary algorithms for parameter optimization},
+  author={B{\"a}ck, Thomas and Schwefel, Hans-Paul},
+  journal={Evolutionary computation},
+  volume={1},
+  number={1},
+  pages={1--23},
+  year={1993},
+  publisher={MIT Press}
+}
 @article{pelikan2002survey,
   title={A survey of optimization by building and using probabilistic models},
   author={Pelikan, Martin and Goldberg, David E and Lobo, Fernando G},
